@@ -1,3 +1,13 @@
+2009-01-21  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/Tsparse.R (intI): for now give intelligible error on NA indices.
+
+	* R/Matrix.R (subset.ij): should deal correctly with NA indices in
+	the 2-column-matrix index case.
+
+	* src/Mutils.c (m_encodeInd, m_encodeInd2): prepare to deal better
+	with NA in indices.
+
 2009-01-20  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* inst/doc/Intro2Matrix.Rnw: mention sparseMatrix
